style: fix border radius on iOS, cleanup css

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
 .App {
   text-align: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
 }
-
-
-
-
