--- a/src/ui/InputForm.css
+++ b/src/ui/InputForm.css
@@ -26,6 +26,7 @@
 }
 
 .baseCircleButton {
+  padding: 0px;
   color: #ffffff;
   background-color: var(--primary-color);
   height: 50px;
